--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "react-mathjax": "^1.0.1",
     "react-mathjax2": "0.0.2",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "serialize-javascript": ">=2.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
